--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -23,7 +23,7 @@ to implement techniques of encapsulation\index{encapsulation}, abstraction\index
 and modularity in web application engineering.
 I created Speakur\index{Speakur}, a real-time discussion social plugin for the web, 
 as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications. 
-Figure~\ref{f:demo1} shows an example of a Speakur discussion.
+Figure~\ref{f:demo1} on~\cpageref{f:demo1} shows an example Speakur discussion.
 
 \subsection{The HTML Document Object Model}
 Like most web applications, Speakur is written in a combination of HTML markup and the Java\-Script programming language. 
@@ -36,13 +36,6 @@ Tim Berners-Lee,
 with billions and billions of pages served, 
 and hundreds of millions of public and private web sites forming a major part of our information landscape~\cite{internetlivestats.com2015}.
 More than perhaps any other invention, the World Wide Web (WWW) has shaped how we see and use the global network.
-
-\begin{figure}[htb]
-\centering
- \includegraphics[width=\textwidth]{images/screenshot_20150312_1630_v2.png}
-\caption{A Speakur thread inside a demonstration page.}
-\label{f:demo1}
-\end{figure}
 
 Those designing and programming applications for the Web as a computing platform have long dreamed of the ability to mix and match independent, reusable chunks of functionality---components---in their documents without mutual coupling and interference. 
 The Document Object Model (DOM)
