Minor fixes in final editing pass before Texas Digital Library upload.

--- a/latex/chapter-analysis.tex
+++ b/latex/chapter-analysis.tex
@@ -130,7 +130,7 @@ Using pure-CSS libraries (like \tcode{bootstrap.css}) with Polymer/WC is safe an
 Writing a Polymer component that directly uses legacy JavaScript\index{JavaScript} libraries (like \tcode{bootstrap.js}) is not nearly as easy in many cases. 
 I tried to use several Bootstrap\index{Bootstrap} JavaScript widgets but quickly ran into incompatibilities with treatment of the document model, event handling, and so on.
 The Twitter Bootstrap developers, perhaps understandably, don't care that much about adding compatibility hacks for relatively immature projects like Polymer. 
-Libraries that provide purely logical services like i18next\index{i18next}, instead of document or interface-related features like Bootstrap, are much easier to integrate.
+Libraries that provide purely logical services like i18next\index{i18next library}, instead of document or interface-related features like Bootstrap, are much easier to integrate.
 
 \item \textbf{Include mobile early in the development cycle.}
 
