--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -189,7 +189,7 @@ custom HTML element\index{Custom Elements} for the use of web authors in their o
 An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in briefly in Listing~\ref{l:example1} below.
 
 %\pagebreak
-\begin{lstlisting}[language=HTML5,caption={Speakur custom HTML element},label=l:example1]
+\begin{lstlisting}[language=HTML5,caption={Speakur custom HTML element.},label=l:example1]
  <!-- place this on your page
       where you want a discussion -->
  <speakur-discussion
